Fixing Mobile Rail on Safari

--- a/source/_patterns/00-nds/02-molecules/navigation/navigation-mobile-rail/navigation-mobile-rail.scss
+++ b/source/_patterns/00-nds/02-molecules/navigation/navigation-mobile-rail/navigation-mobile-rail.scss
@@ -1,5 +1,4 @@
 .navigation--mobile-rail {
-    height: 100%;
     position: relative;
     &__button {
         @extend .button-nds;
@@ -19,7 +18,7 @@
         }
     }
     &__content {
-        height: 100%;
+        height: auto;
         @include media-breakpoint-up(lg) {
             display: block !important;
         }
